init Redux and React-Redux, added Profile component, also was added checkbox to show and hide info about person account (changed in state)

--- a/src/App.css
+++ b/src/App.css
@@ -124,3 +124,14 @@ input {
   font-size: 30px;
 
 }
+
+.checkbox-container {
+  background-color: #282c34;
+  height: 100vh;
+}
+
+.info-block {
+  color: white;
+  padding-left: 100px;
+  padding-top: 60px;
+}
